Fixes issues with useDetectOutsideClick hook, z-index bug for dropdown, and removes some whitespace in collapsibleFields.scss

--- a/src/components/dropdown/dropdown.scss
+++ b/src/components/dropdown/dropdown.scss
@@ -1,12 +1,3 @@
-.menu-container {
-  position: relative;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding-left: 4px;
-  padding-right: 4px;
-}
-
 .menu-trigger {
   align-items: center;
   border-width: 0;
@@ -69,8 +60,9 @@
 }
 
 .menu {
-  background: #ffffff;
+  background: #fff;
   position: absolute;
+  z-index: 1;
   opacity: 0;
   visibility: hidden;
   transform: translateY(-20px);
